Existing/Project/valid-pods/valid-pod-with-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: valid-pod-with-resources
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources:
        requests:
          memory: "100Mi"
          cpu: "100m"
        limits:
          memory: "200Mi"
          cpu: "200m"
